# dimos

./: .codecov.yml  .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  AGENTS.md  AI_POLICY.md  CONTEXT.md  CONTRIBUTING.md  Caddyfile  DEPLOY.md  HARDENING_PLAN.md  MANIFEST.in  README.md  default.env  flake.nix  module_deployment_proposal.md  pr_responses.yaml  pyproject.toml  recording_go2_mid360.db  setup.py
.agents/: provision
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: _docker-build-template.yml  auto-merge.yml  autofix.yml  backport.yml  ci.yml  code-cleanup.yml  dimsim-check.yml  doc-codeblocks.yml  docker-build.yml  pr-label.yml  pr-labels.yml  release.yml  stale.yml
app/: .env.example  config.py  main.py  metrics.py  ratelimit.py  requirements.txt  test_metrics.py  test_ratelimit.py  test_tenant_isolation.py
app/models/: database.py  session.py
app/routers/: sessions.py
app/services/: auth.py  cloudflare.py  keys.py  livekit.py  sdp_utils.py
bench_assets/: .gitattributes
dimos/: conftest.py  constants.py
dimos/agents/: annotation.py  conftest.py  vlm_agent.py  vlm_agent_spec.py  vlm_stream_tester.py  web_human_input.py
dimos/codebase_checks/: test_blueprint_kwargs.py  test_get_logger.py  test_import_from_source.py
dimos/control/: README.md  components.py  coordinator.py  hardware_interface.py  routing.py  task.py  test_control.py  test_coordinator_commands.py  test_hardware_interface.py  tick_loop.py
dimos/core/: core.py  external_python_bootstrap.py  external_python_module.py  external_python_runtime.py  global_config.py  module.py  native_module.py  rpc_client.py  runtime_environment.py  runtime_prepare.py  runtime_reconciliation.py  stream.py  test_async_module_dispatch_serialization.py  test_async_module_handles.py  test_async_module_main.py  test_async_module_process_observable.py  test_async_module_rpc.py  test_async_module_rpc_sync_to_async.py  test_codec_transport.py  test_core.py  test_external_python_bootstrap.py  test_external_python_end_to_end.py  test_external_python_runtime.py  test_global_config.py  test_gpd_grasp_demo.py  test_gpd_worker_demo.py  test_native_module.py  test_runtime_environment.py  test_runtime_reconciliation.py  test_stream.py  test_transform.py  test_transport_factory.py  test_venv_module_demo.py  test_zenoh_transport.py  tf_module.py  transform.py  (+2 more)
dimos/hardware/sensors/lidar/fastlio2_rust/rust/: Cargo.toml  flake.nix
dimos/hardware/sensors/lidar/fastlio2_rust/rust/src/: commons.rs  ieskf.rs  ikd_tree.rs  imu_processor.rs  lib.rs  lidar_processor.rs  main.rs  map_builder.rs  so3.rs  utils.rs  voxel_grid.rs
dimos/hardware/sensors/lidar/livox/virtual_mid360/: Cargo.toml  blueprints.py  flake.nix  module.py  recorder.py
dimos/hardware/sensors/lidar/livox/virtual_mid360/src/: main.rs
dimos/hardware/sensors/lidar/pointlio/cpp/: CMakeLists.txt  fastlio-resize-darwin.patch  flake.nix  main.cpp  pcap_replay.hpp  timing.hpp
dimos/hardware/sensors/lidar/pointlio/cpp/config/: mid360.yaml
dimos/hardware/sensors/lidar/rustlio2/rust/: Cargo.toml  flake.nix
dimos/hardware/sensors/lidar/rustlio2/rust/src/: main.rs
dimos/hardware/sensors/lidar/virtual_mid360/: Cargo.toml  blueprints.py  flake.nix  module.py  recorder.py
dimos/hardware/sensors/lidar/virtual_mid360/src/: main.rs
dimos/navigation/nav_3d/repulsive_local_planner/rust/: Cargo.toml  flake.nix
dimos/navigation/nav_3d/repulsive_local_planner/rust/src/: costmap.rs  main.rs  python.rs
dimos/navigation/nav_3d/repulsive_local_planner/rust/tests/: pipeline.rs
dimos/navigation/nav_stack/modules/pgo_rust/rust/: Cargo.toml  build.rs
dimos/navigation/nav_stack/modules/pgo_rust/rust/src/: icp.rs  lcm_conv.rs  local_msgs.rs  main.rs  optimizer.rs  pgo.rs  scan_context.rs
dimos/navigation/nav_stack/modules/pgo_rust/rust/src/gtsam_ffi/: mod.rs
dimos/navigation/nav_stack/modules/pgo_rust/rust/vendor-dimos-lcm/: .gitignore
dimos/navigation/nav_stack/modules/pgo_rust/rust/vendor-dimos-lcm/.github/workflows/: release.yml
dimos/navigation/nav_stack/modules/pgo_rust/rust/vendor-dimos-lcm/tools/rust/: lcm_rust_gen.py
dimos/navigation/nav_stack/modules/pgo_rust/rust/vendor-dimos-lcm/tools/rust/lcm/: Cargo.toml  README.md
dimos/navigation/nav_stack/modules/pgo_rust/rust/vendor-dimos-lcm/tools/rust/lcm/examples/: publisher.rs  subscriber.rs
dimos/navigation/nav_stack/modules/pgo_rust/rust/vendor-dimos-lcm/tools/rust/lcm/src/: lib.rs  transport.rs
dimos/robot/deeprobotics/m20/dds/cpp/: CMakeLists.txt  dimos_native_module.hpp  main.cpp
dimos/robot/deeprobotics/m20/onboard/drdds-zenoh-bridge/cpp/: CMakeLists.txt  build.sh  main.cpp
dimos/simulation/sensors/rust/scene_lidar/: Cargo.toml
dimos/simulation/sensors/rust/scene_lidar/src/: accel.rs  entity.rs  main.rs
docs/: docs.json  introduction.mdx  release-signing-key.asc  requirements.md  scene-registry-list-watch-design.html
examples/: __init__.py  configuration_resolved_io.py
examples/external_python_module/python/: .gitignore  pixi.toml  pyproject.toml
examples/external_python_module/python/example_external/: __init__.py  runtime.py
examples/native-modules/cpp/: .gitignore  CMakeLists.txt  flake.nix
examples/native-modules/cpp/src/: ping.cpp  pong.cpp
misc/: go2_cmd_cli.py
native/cpp/tests/: CMakeLists.txt  test_config.cpp  test_lcm_codec.cpp  test_lcm_transport.cpp  test_module.cpp  test_transport_selection.cpp
native/rust/dimos-module/: Cargo.toml
native/rust/dimos-module/examples/: transport_bench.rs
native/rust/dimos-module/src/: lcm.rs  lib.rs  log.rs  module.rs  tf.rs  transport.rs  zenoh.rs
native/rust/dimos-rerun-bridge/: Cargo.toml
native/rust/dimos-rerun-bridge/src/: main.rs
openspec/: config.yaml
pgo/: post_process.py
scripts/: demo_venv_worker_module.py  deploy.sh  g1_replay.py  pgo_iterate.py  run_memory_world.py
terraform/: cognito.tf  main.tf  ses.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf
web/: README.md  deno.json  index.html
(+2232 files in other folders)
