[package]
name = "dimos-module"
version = "0.1.0"
edition = "2021"
description = "Rust native module SDK for dimos NativeModule framework"
license = "Apache-2.0"

[dependencies]
dimos-lcm = { git = "https://github.com/dimensionalOS/dimos-lcm.git", branch = "rust-codegen" }
dimos-module-macros = { version = "=0.1.0", path = "../dimos-module-macros" }
lcm-msgs = { git = "https://github.com/dimensionalOS/dimos-lcm.git", branch = "rust-codegen" }
nalgebra = "0.35.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
validator = { version = "0.20", features = ["derive"] }
zenoh = { version = "1", features = ["unstable"] }

[dev-dependencies]
tracing-test = "0.2"

[[example]]
name = "transport_bench"
