[package]
name = "virtual-mid360"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "virtual_mid360"
path = "src/main.rs"

[dependencies]
dimos-module = { path = "../../../../../native/rust/dimos-module" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
validator = { version = "0.20", features = ["derive"] }
