[package]
name = "dimos-fastlio2-rust"
version = "0.1.0"
edition = "2021"
description = "Native Rust FAST-LIO2 LiDAR-inertial odometry module for dimos"
license = "Apache-2.0"

[lib]
name = "fastlio2"
path = "src/lib.rs"

[[bin]]
name = "fastlio2_rust_native"
path = "src/main.rs"

[dependencies]
dimos-module = { path = "../../../../../../native/rust/dimos-module" }
lcm-msgs = { git = "https://github.com/dimensionalOS/dimos-lcm.git", branch = "rust-codegen" }
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
approx = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
