[package]
name = "dimos-lcm"
version = "0.1.0"
edition = "2021"
description = "Pure Rust LCM (Lightweight Communications and Marshalling) transport"
license = "Apache-2.0"

[dependencies]
byteorder = "1"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.51.1", features = ["net", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
lcm-msgs = { path = "../../../generated/rust_lcm_msgs" }
